Fix ammo breakdown bug where hits were being incorrecly attributed.

--- a/src/mod_rating_by_type/templates/gunner_sortie.html
+++ b/src/mod_rating_by_type/templates/gunner_sortie.html
@@ -92,7 +92,7 @@
                 </div>
                 <div class="general_right">
                     <div class="sortie_aircraft">
-                        {% trans 'Aircraft' context 'sortie' %}: {{ sortie.aircraft.name }}
+                        {{ sortie.aircraft.name }}
                     </div>
                     {% trans 'fuel' context 'sortie' %}: {{ sortie.fuel }}%<br>
                     {% trans 'payload' %}:
