Fix computation and sorting of no ai streaks in ironman pilots.

--- a/src/mod_rating_by_type/templates/ironman_pilots.html
+++ b/src/mod_rating_by_type/templates/ironman_pilots.html
@@ -42,7 +42,7 @@
                     </div>
                     {% if no_ai_streaks %}
                     <div class="cell" style="width: 90px;">
-                        <a class="sort_by" href="?sort_by=-ak_total">
+                        <a class="sort_by" href="?sort_by=-ak_no_ai">
                             <img src="{% static 'img/icons/small/streak.png' %}" width="18" height="18"
                                  alt="{% trans 'Air Kills (No AI)' %}" title="{% trans 'Air Kills (No AI)' %}">
                         </a>
