Start adding flight time bars for fighter/attacker/bombers.

--- a/src/mod_rating_by_type/templates/base.html
+++ b/src/mod_rating_by_type/templates/base.html
@@ -34,6 +34,7 @@
 
     <link href="{% static 'css/style.css' %}" rel="stylesheet">
     <link href="{% static 'css/footer_coffee.css' %}" rel="stylesheet">
+    <link href="{% static 'css/collapsible_main.css' %}" rel="stylesheet">
     <script>
         var LANGUAGE_CODE = '{{ LANGUAGE_CODE }}';
         var TOUR_ID = {{ request.tour.id }};
