--- a/src/mod_rating_by_type/templates/main.html
+++ b/src/mod_rating_by_type/templates/main.html
@@ -109,6 +109,34 @@
                     </div>
                     {% endif %}
 
+                    <button type="button" class="collapsible"></button>
+
+                    <div class="content">
+                        <div class="bar_small" style="float: right;">
+                        <div class="bar_icon">
+                            <img src="{% static 'img/icons/small/ft.png' %}" width="18" height="18" alt="" title="">
+                        </div>
+                        <div class="bar_title">
+                            {% trans 'Flight time (hours)' context 'tour' %}
+{#                            Налет#}
+                        </div>
+                        <div class="bar">
+                            <div class="bar_grid" style="width: 25%;"></div>
+                            <div class="bar_grid" style="width: 50%;"></div>
+                            <div class="bar_grid" style="width: 75%;"></div>
+                            {% widthratio summary_coal.1.flight_time summary_total.flight_time 100 as width %}
+                            <div class="bar_red" style="width: {{ width }}%;"></div>
+                        </div>
+                        <div class="bar_red_num">
+                            {{ summary_coal.1.flight_time|seconds_to_time:'h' }}
+                        </div>
+                        <div class="bar_blue_num">
+                            {{ summary_coal.2.flight_time|seconds_to_time:'h' }}
+                        </div>
+                        </div>
+                    </div>
+
+
                     <div class="clearfix"></div>
 
                 </div>
@@ -543,5 +571,22 @@
             </div>
             {% endif %}
         </div>
+
+            <script>
+        var coll = document.getElementsByClassName("collapsible");
+        var i;
+
+        for (i = 0; i < coll.length; i++) {
+          coll[i].addEventListener("click", function() {
+            this.classList.toggle("active");
+            var content = this.nextElementSibling;
+            if (content.style.maxHeight){
+              content.style.maxHeight = null;
+            } else {
+              content.style.maxHeight = content.scrollHeight + "px";
+            }
+          });
+        }
+    </script>
     </section>
 {% endblock content %}
