--- a/src/mod_rating_by_type/templates/main.html
+++ b/src/mod_rating_by_type/templates/main.html
@@ -109,32 +109,81 @@
                     </div>
                     {% endif %}
 
+                    {% if summary_total_heavy and summary_total_medium and summary_total_light %}
                     <button type="button" class="collapsible"></button>
 
                     <div class="content">
-                        <div class="bar_small" style="float: right;">
+                        <div class="bar_small" style="float: left;">
                         <div class="bar_icon">
                             <img src="{% static 'img/icons/small/ft.png' %}" width="18" height="18" alt="" title="">
                         </div>
                         <div class="bar_title">
-                            {% trans 'Flight time (hours)' context 'tour' %}
+                            {% trans 'Fighter flight time (hours)' context 'tour' %}
 {#                            Налет#}
                         </div>
                         <div class="bar">
                             <div class="bar_grid" style="width: 25%;"></div>
                             <div class="bar_grid" style="width: 50%;"></div>
                             <div class="bar_grid" style="width: 75%;"></div>
-                            {% widthratio summary_coal.1.flight_time summary_total.flight_time 100 as width %}
+                            {% widthratio summary_coal_light.1.flight_time summary_total_light.flight_time 100 as width %}
                             <div class="bar_red" style="width: {{ width }}%;"></div>
                         </div>
                         <div class="bar_red_num">
-                            {{ summary_coal.1.flight_time|seconds_to_time:'h' }}
+                            {{ summary_coal_light.1.flight_time|seconds_to_time:'h' }}
                         </div>
                         <div class="bar_blue_num">
-                            {{ summary_coal.2.flight_time|seconds_to_time:'h' }}
+                            {{ summary_coal_light.2.flight_time|seconds_to_time:'h' }}
+                        </div>
+                        </div>
+
+                        <div class="bar_small" style="float: right;">
+                        <div class="bar_icon">
+                            <img src="{% static 'img/icons/small/ft.png' %}" width="18" height="18" alt="" title="">
+                        </div>
+                        <div class="bar_title">
+                            {% trans 'Attacker flight time (hours)' context 'tour' %}
+{#                            Налет#}
+                        </div>
+                        <div class="bar">
+                            <div class="bar_grid" style="width: 25%;"></div>
+                            <div class="bar_grid" style="width: 50%;"></div>
+                            <div class="bar_grid" style="width: 75%;"></div>
+                            {% widthratio summary_coal_medium.1.flight_time summary_total_medium.flight_time 100 as width %}
+                            <div class="bar_red" style="width: {{ width }}%;"></div>
+                        </div>
+                        <div class="bar_red_num">
+                            {{ summary_coal_medium.1.flight_time|seconds_to_time:'h' }}
+                        </div>
+                        <div class="bar_blue_num">
+                            {{ summary_coal_medium.2.flight_time|seconds_to_time:'h' }}
+                        </div>
+                        </div>
+
+                        <div class="bar_small" style="float: left;">
+                        <div class="bar_icon">
+                            <img src="{% static 'img/icons/small/ft.png' %}" width="18" height="18" alt="" title="">
+                        </div>
+                        <div class="bar_title">
+                            {% trans 'Bomber flight time (hours)' context 'tour' %}
+{#                            Налет#}
+                        </div>
+                        <div class="bar">
+                            <div class="bar_grid" style="width: 25%;"></div>
+                            <div class="bar_grid" style="width: 50%;"></div>
+                            <div class="bar_grid" style="width: 75%;"></div>
+                            {% widthratio summary_coal_heavy.1.flight_time summary_total_heavy.flight_time 100 as width %}
+                            <div class="bar_red" style="width: {{ width }}%;"></div>
+                        </div>
+                        <div class="bar_red_num">
+                            {{ summary_coal_heavy.1.flight_time|seconds_to_time:'h' }}
+                        </div>
+                        <div class="bar_blue_num">
+                            {{ summary_coal_heavy.2.flight_time|seconds_to_time:'h' }}
                         </div>
                         </div>
                     </div>
+
+                    {% endif %}
 
 
                     <div class="clearfix"></div>
