--- a/src/mod_rating_by_type/templates/pilot_sortie_log.html
+++ b/src/mod_rating_by_type/templates/pilot_sortie_log.html
@@ -74,7 +74,12 @@
                     {% else %}
                     <div class="cell">
                         {% endif %}
+
+                        {% if event.extra_data.damage.ram %}
+                        {% trans 'Ram' %}
+                        {% else %}
                         {{ event.message }}
+                        {% endif %}
                         {% if event.extra_data.damage %}
                         {% if event.extra_data.damage.pct %}
                         - {{ event.extra_data.damage.pct }}%
