--- a/src/mod_rating_by_type/templates/tour.html
+++ b/src/mod_rating_by_type/templates/tour.html
@@ -181,6 +181,29 @@
                             {{ summary_coal_heavy.2.flight_time|seconds_to_time:'h' }}
                         </div>
                         </div>
+                                                <div class="bar_small" style="float: right;">
+                        <div class="bar_icon">
+                            <img src="{% static 'img/icons/small/ft.png' %}" width="18" height="18" alt="" title="">
+                        </div>
+                        <div class="bar_title">
+                            {% trans 'Tank operation time (hours)' context 'tour' %}
+{#                            Налет#}
+                        </div>
+                        <div class="bar">
+                            <div class="bar_grid" style="width: 25%;"></div>
+                            <div class="bar_grid" style="width: 50%;"></div>
+                            <div class="bar_grid" style="width: 75%;"></div>
+                            {% widthratio summary_coal_tank.1.flight_time summary_total_tank.flight_time 100 as width %}
+                            <div class="bar_red" style="width: {{ width }}%;"></div>
+                        </div>
+                        <div class="bar_red_num">
+                            {{ summary_coal_tank.1.flight_time|seconds_to_time:'h' }}
+                        </div>
+                        <div class="bar_blue_num">
+                            {{ summary_coal_tank.2.flight_time|seconds_to_time:'h' }}
+                        </div>
+                        </div>
+
                     </div>
 
                     {% endif %}
