--- a/src/mod_rating_by_type/templates/squad.html
+++ b/src/mod_rating_by_type/templates/squad.html
@@ -197,6 +197,13 @@
                     <div class="num">{{ squad.gk_total }}</div>
                 </div>
 
+                {% if squad.killboard_pve.cruise_missile %}
+                <div class="sub_item">
+                    <div class="name">{% trans 'Cruise Missile' context 'total' %}</div>
+                    <div class="num">{{ squad.killboard_pve.cruise_missile }}</div>
+                </div>
+                {% endif %}
+
                 {% if squad.killboard_pvp.tank_heavy %}
                 <div class="sub_item">
                     <div class="name">{% trans 'Heavy Tanks' context 'total' %}</div>
