--- a/src/stats/templates/tankman.html
+++ b/src/stats/templates/tankman.html
@@ -413,6 +413,13 @@
                     <div class="num">{{ player.killboard_pve.aircraft_transport }}</div>
                 </div>
                 {% endif %}
+				
+				{% if player.killboard_pve.cruise_missile %}
+                <div class="item">
+                    <div class="name">{% trans 'Cruise Missile' context 'total' %}</div>
+                    <div class="num">{{ layer.killboard_pve.cruise_missile }}</div>
+                </div>
+                {% endif %}
 
                 {% if player.ak_assist %}
                 <div class="item">
