--- a/src/mod_rating_by_type/templates/base.html
+++ b/src/mod_rating_by_type/templates/base.html
@@ -88,9 +88,13 @@
                     {% if request.module_ironman %}
                     <a href="{% url 'stats:ironman' %}?tour={{ request.tour.id }}">{% trans 'Ironman Rankings' %}</a>
                     {% endif %}
+                    {% if request %}
+                    <a href="{% url 'stats:mission_ironman' %}?tour={{ request.tour.id }}">{% trans 'Last Mission Ironman' %}</a>
+                    {% endif %}
                     {% if request.module_gunner_stats %}
                     <a href="{% url 'stats:gunners' %}?tour={{ request.tour.id }}">{% trans 'Gunner Rankings' %}</a>
                     {% endif %}
+
                     <a href="{% url 'stats:squads' %}?tour={{ request.tour.id }}">{% trans 'Squad Rankings' %}</a>
                     {% if request.aircraft_rankings_installed %}
                     <a href="{% url 'stats:all_aircraft' %}?tour={{ request.tour.id }}">{% trans 'Aircraft Rankings' %}</a>
