--- a/src/mod_rating_by_type/templates/squads.html
+++ b/src/mod_rating_by_type/templates/squads.html
@@ -62,6 +62,22 @@
                                  alt="K/Hr" title="K/Hr">
                         </a>
                     </div>
+                    {% if ironman %}
+                    <div class="cell" style="width: 90px;">
+                        <a class="sort_by" href="?sort_by=-khr">
+                            <img src="{% static 'img/icons/small/pilot_surv.png' %}" width="18" height="18"
+                                 alt="{% trans 'Current streak' %}" title="{% trans 'Current streak' %}">
+                        </a>
+                    </div>
+                    <div class="cell" style="width: 90px;">
+                        <a class="sort_by" href="?sort_by=-khr">
+                            <img src="{% static 'img/icons/small/streak.png' %}" width="18" height="18"
+                                 alt="{% trans 'Best ironman streak' %}" title="{% trans 'Best ironman streak' %}">
+                        </a>
+                    </div>
+
+                    {% endif %}
+
                     {% if split_rankings %}
                     <div class="cell" style="width: 90px;">
                         <a class="sort_by" href="?sort_by=-rating_light">
@@ -102,6 +118,10 @@
                     <div class="cell">{{ squad.flight_time|seconds_to_time }}</div>
                     <div class="cell">{{ squad.kd }}</div>
                     <div class="cell">{{ squad.khr }}</div>
+                    {% if ironman %}
+                    <div class="cell">{{ squad.SquadAugmentation_MOD_SPLIT_RANKINGS.live_ironman_score }}</div>
+                    <div class="cell">{{ squad.SquadAugmentation_MOD_SPLIT_RANKINGS.best_ironman_score }}</div>
+                    {% endif %}
                     {% if split_rankings %}
                     <div class="cell" title="{{ squad.rating_light }}">{{ squad.rating_format_light }}</div>
                     <div class="cell" title="{{ squad.rating_medium }}">{{ squad.rating_format_medium }}</div>
