Fix coalition display bug in itaf layout.

--- a/src/mod_rating_by_type/templates/main_itaf.html
+++ b/src/mod_rating_by_type/templates/main_itaf.html
@@ -29,7 +29,7 @@
                         <div class="cell">{{ forloop.counter }}</div>
                         <div class="cell">{{ vlife.profile.nickname }}</div>
                         <div class="cell img">
-                            {% include 'inline/table_coal_pref_icon.html' with coal_pref=player.coal_pref %}
+                            {% include 'inline/table_coal_pref_icon.html' with coal_pref=vlife.coal_pref %}
                         </div>
                         <div class="cell">{{ vlife.score }}</div>
                     </a>
@@ -98,7 +98,7 @@
                         <div class="cell">{{ forloop.counter }}</div>
                         <div class="cell">{{ vlife.profile.nickname }}</div>
                         <div class="cell img">
-                            {% include 'inline/table_coal_pref_icon.html' with coal_pref=player.coal_pref %}
+                            {% include 'inline/table_coal_pref_icon.html' with coal_pref=vlife.coal_pref %}
                         </div>
                         <div class="cell">{{ vlife.score }}</div>
                     </a>
@@ -171,7 +171,7 @@
                         <div class="cell">{{ forloop.counter }}</div>
                         <div class="cell">{{ vlife.profile.nickname }}</div>
                         <div class="cell img">
-                            {% include 'inline/table_coal_pref_icon.html' with coal_pref=player.coal_pref %}
+                            {% include 'inline/table_coal_pref_icon.html' with coal_pref=vlife.coal_pref %}
                         </div>
                         <div class="cell">{{ vlife.score }}</div>
                     </a>
@@ -243,7 +243,7 @@
                         <div class="cell">{{ forloop.counter }}</div>
                         <div class="cell">{{ vlife.profile.nickname }}</div>
                         <div class="cell img">
-                            {% include 'inline/table_coal_pref_icon.html' with coal_pref=player.coal_pref %}
+                            {% include 'inline/table_coal_pref_icon.html' with coal_pref=vlife.coal_pref %}
                         </div>
                         <div class="cell">{{ vlife.score }}</div>
                     </a>
