--- a/src/mod_rating_by_type/templates/tour_itaf.html
+++ b/src/mod_rating_by_type/templates/tour_itaf.html
@@ -33,7 +33,7 @@
                         <div class="cell">{{ forloop.counter }}</div>
                         <div class="cell">{{ vlife.profile.nickname }}</div>
                         <div class="cell img">
-                            {% include 'inline/table_coal_pref_icon.html' with coal_pref=player.coal_pref %}
+                            {% include 'inline/table_coal_pref_icon.html' with coal_pref=vlife.coal_pref %}
                         </div>
                         <div class="cell">{{ vlife.score }}</div>
                     </a>
@@ -102,7 +102,7 @@
                         <div class="cell">{{ forloop.counter }}</div>
                         <div class="cell">{{ vlife.profile.nickname }}</div>
                         <div class="cell img">
-                            {% include 'inline/table_coal_pref_icon.html' with coal_pref=player.coal_pref %}
+                            {% include 'inline/table_coal_pref_icon.html' with coal_pref=vlife.coal_pref %}
                         </div>
                         <div class="cell">{{ vlife.score }}</div>
                     </a>
@@ -175,7 +175,7 @@
                         <div class="cell">{{ forloop.counter }}</div>
                         <div class="cell">{{ vlife.profile.nickname }}</div>
                         <div class="cell img">
-                            {% include 'inline/table_coal_pref_icon.html' with coal_pref=player.coal_pref %}
+                            {% include 'inline/table_coal_pref_icon.html' with coal_pref=vlife.coal_pref %}
                         </div>
                         <div class="cell">{{ vlife.score }}</div>
                     </a>
@@ -247,7 +247,7 @@
                         <div class="cell">{{ forloop.counter }}</div>
                         <div class="cell">{{ vlife.profile.nickname }}</div>
                         <div class="cell img">
-                            {% include 'inline/table_coal_pref_icon.html' with coal_pref=player.coal_pref %}
+                            {% include 'inline/table_coal_pref_icon.html' with coal_pref=vlife.coal_pref %}
                         </div>
                         <div class="cell">{{ vlife.score }}</div>
                     </a>
