--- a/src/mod_rating_by_type/templates/main_itaf.html
+++ b/src/mod_rating_by_type/templates/main_itaf.html
@@ -275,7 +275,7 @@
                 </div>
             </div>
 
-            <div class="top_pilots">
+             <div class="top_pilots">
                 <div class="top_title">
                     {% trans 'Best bomber ironmen' context 'tour_top' %}
                 </div>
@@ -286,7 +286,7 @@
                         <div class="cell" style="width: 30px;"></div>
                         <div class="cell">{% trans 'score' context 'tour_top' %}</div>
                     </div>
-                    {% for player in top_ironman_light %}
+                    {% for player in top_ironman_heavy %}
                     <a class="row" href="{{ player.get_profile_url }}">
                         <div class="cell">{{ forloop.counter }}</div>
                         <div class="cell">{{ player.nickname }}</div>
